--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,33 +13,33 @@
   <body>
 
     <h3 class="navbar-text float-right">
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      Welcome <strong><%= current_user.name %></strong>
-    &nbsp;
-    &nbsp;
-      <%= link_to 'Ask question', new_question_path %>
-    &nbsp;
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-    &nbsp;
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-    &nbsp;
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-    &nbsp;
-      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
-    &nbsp;
-    <%= link_to "QuestionsPage", questions_path %>
+      <% if user_signed_in? %>
+        Logged in as <strong><%= current_user.email %></strong>.
+        Welcome <strong><%= current_user.name %></strong>
+      &nbsp;
+      &nbsp;
+        <%= link_to 'Ask question', new_question_path %>
+      &nbsp;
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      &nbsp;
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+      <% else %>
+      &nbsp;
+        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      &nbsp;
+        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+      <% end %>
+      &nbsp;
+      <%= link_to "QuestionsPage", questions_path %>
     </h3>
 
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
+    <% if flash %>
+      <% flash.each do |type, msg| %>
+        <p class="alert alert-#{type}">(<%= type%>)<%= msg %></p> 
+      <% end %>
     <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    <div class='container' >
+    <%= params %> 
+    <div>
       <%= yield %>
     </div>
   </body>
