--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,14 @@
+    <%
+=begin%>
+ <%= f.collection_select(:manufacturer_id, Manufacturer.all, :id, :name, :prompt => 'Select') %> 
+    <%= f.select :topic, options_for_select(@topics) , :prompt => "Select One"   %>   
+<%
+=end%> 
 <%= form_with( model: @question ) do |f| %>
     <%= f.label :question %>
     <%= f.text_area :question %>
+    <%= f.collection_select(:topic_id, Topic.all, :id, :topic, :prompt => 'Select Any Topic') %>
     <%= f.submit 'Ask any Question'%>
-<% end %>
+<% end %> 
+ 
+ 
