topic relation with user

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,20 +1,13 @@
  <%= link_to "Back", root_path %>
  <div>
  <p>Question:</p>
-    <h2><%= @question.question 
-   #  if @question.question
-     %></h2>
-    <%= render 'answers/list_of_answers' %>
-    &nbsp;
-    <h3>Give Answer     </h3>
-    <% if current_user %>
-    <%= render 'answers/answer', object: @question %>
-    <% end %>
-    <%
-=begin%>
- <%= User.find_by(id: @question.user_id).name if @question %> 
-<%
-=end%>
+   <h2><%= @question.question %></h2>
+      <%= render 'answers/list_of_answers' %>
+   &nbsp;
+   <h3>Give Answer </h3>
+   <% if current_user %>
+      <%= render 'answers/answer', object: @question %>
+   <% end %>
  </div>
 
     <h3>Answer</h3>
