--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,6 +6,8 @@
             <%= link_to "Your Questions", ques_path  %> &nbsp;
             <%= link_to "Your Answers", ans_path  %> &nbsp;
             <%= link_to "Create new Topic", new_topic_path %>
+            <%= link_to "See Topics", topics_path %>
+            <%= render "topics/user_topic" %>
         </strong>
 <% end %>
 </div>
