--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,23 +5,23 @@
         <strong>
             <%= link_to "Your Questions", ques_path  %> &nbsp;
             <%= link_to "Your Answers", ans_path  %> &nbsp;
-            <%= link_to "Create new Topic", new_topic_path %>
-            <%= link_to "See Topics", topics_path %>
+            <%= link_to "Create Topic", new_topic_path %> &nbsp;
+            <%= link_to "See Topics", topics_path %> &nbsp;
             <%= render "topics/user_topic" %>
         </strong>
-<% end %>
+    <% end %>
+<br/>
 </div>
 <% @questions.each do |question| %><br>
 <div>
     <strong>
         <%= question.question   %><br>        
     </strong>
-    <%= link_to "show", question_path(question)%>
+    <%= link_to "View", question_path(question)%>
+<br/>
     <% if current_user && question.user_id == current_user.id %>
-
         <%= link_to "edit", edit_question_path(question) %>
         <%= link_to "delete", question_path(question), method: :delete %>
-        
     <%  end  %>
-<%  end  %>
 </div>
+<%  end  %>
