--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -4,10 +4,17 @@
     <%= f.select :topic, options_for_select(@topics) , :prompt => "Select One"   %>   
 <%
 =end%> 
+
+    <%
+=begin%>
+ <%= f.collection_select(:topic_id, Topic.all, :id, :topic, :prompt => 'Select Any Topic') %> 
+<%
+=end%>
+
+
 <%= form_with( model: @question ) do |f| %>
     <%= f.label :question %>
     <%= f.text_area :question %>
-    <%= f.collection_select(:topic_id, Topic.all, :id, :topic, :prompt => 'Select Any Topic') %>
     <%= f.submit 'Ask any Question'%>
 <% end %> 
  
