--- a/app/views/topics/_user_topic.html.erb
+++ b/app/views/topics/_user_topic.html.erb
@@ -1,6 +1,8 @@
-<h3>Topics You follow </h3>
-
-<% if current_user&.topic&.each do |topic| %>
-    <li> <%= topic.topic %> </li>
+ <h3>Topics You follow </h3>
+ 
+<main>
+    <% if current_user&.topic&.each do |topic| %>
+        <li> <%= topic.topic %> </li>
+        <% end %> 
     <% end %> 
-<% end %> 
+</main>
