user-follow all set

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,20 +1,28 @@
  <%= link_to "Back", root_path %>
  <div>
-   <% if current_user.email == User.find(@question.id).email %>
-      <%= render 'topics/list', object: @question %> 
+   <% if user_signed_in? %>
+      <% if (current_user.email == User.find(@question.user_id).email)  %>
+         <%= render 'topics/list', object: @question %> 
+      <% end %>
    <% end %>
  <br/>
  <br/>
  <br/>
    <p>Question:</p>
+   <%
+=begin%>
+ <%= render "questions/question_view", question: @question %> 
+<%
+=end%>
    
-   <h2><%= @question.question %></h2>
+ <h2><%= @question.question %></h2>
       <%= render 'answers/list_of_answers' %>
       &nbsp;
       <h3>Give Answer </h3>
    <% if current_user %>
       <%= render 'answers/answer', object: @question %>
-   <% end %>
+   <% end %> 
+
  </div>
 
     <h3>Answer</h3>
