--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,27 +1,34 @@
-<h1>Questions</h1>
-
-<div>
-    <% if current_user  %>
+<%
+=begin%>
+ <div>
+    <% if current_user %>
         <strong>
-            <%= link_to "Your Questions", ques_path  %> &nbsp;
-            <%= link_to "Your Answers", ans_path  %> &nbsp;
-            <%= link_to "Create Topic", new_topic_path %> &nbsp;
-            <%= link_to "See Topics", topics_path %> &nbsp;
+            <%= link_to "Your Questions" , ques_path %> &nbsp;
+            <%= link_to "Your Answers" , ans_path %> &nbsp;
+            <%= link_to "Create Topic" , new_topic_path %> &nbsp;
+            <%= link_to "See Topics" , topics_path %> &nbsp;
+            <%= link_to "Users", userss_path %> &nbsp;
+
             <%= render "topics/user_topic" %>
         </strong>
+        <% end %>
+
+</div> 
+<%
+=end%>
+
+<h1>Questions</h1>
+<table>
+<% @questions.each do |question| %>
+    <tbody>
+        <tr>
+            <th><%= question.question %></th>
+            <td><%= link_to "View" , question_path(question)%></td>
+        <% if current_user && question.user_id==current_user.id %>
+            <td><%= link_to "edit" , edit_question_path(question) %></td>
+            <td><%= link_to "delete" , question_path(question), method: :delete %></td>
+        <% end %>
     <% end %>
-<br/>
-</div>
-<% @questions.each do |question| %><br>
-<div>
-    <strong>
-        <%= question.question   %><br>        
-    </strong>
-    <%= link_to "View", question_path(question)%>
-<br/>
-    <% if current_user && question.user_id == current_user.id %>
-        <%= link_to "edit", edit_question_path(question) %>
-        <%= link_to "delete", question_path(question), method: :delete %>
-    <%  end  %>
-</div>
-<%  end  %>
+        </tr>
+    </tbody>
+</table>
