--- a/app/views/pages/_link_page.html.erb
+++ b/app/views/pages/_link_page.html.erb
@@ -6,6 +6,8 @@
             <%= link_to "Create Topic" , new_topic_path %> &nbsp;
             <%= link_to "See Topics" , topics_path %> &nbsp;
             <%= link_to "Users", userss_path %> &nbsp; 
+            <%= link_to "View Questions", questions_path %>
+
         </strong>
         <% end %>
 </header>
