--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,10 +1,5 @@
-<h1>Answer page</h1>
-<%
-=begin%>
- <%= form_with(model: @answer , url: new_questions_answers_path, local: true  , method: :post) do |f| %> 
-<%
-=end%>
-<%= form_with(model: [@question, @question.answers.build] ) do |f| %>
+<h1>Answer page</h1>  
+<%= form_with(model: [question, question.answers.build] ) do |f| %>
     <%= f.label :answer %>
     <%= f.text_area :answer %>
     <%= f.submit 'Submit' %>
