--- a/app/views/pages/_user_button.html.erb
+++ b/app/views/pages/_user_button.html.erb
@@ -1,5 +1,5 @@
  <% if active_relation?(ano_user) %>
-    <%= button_to "unfollow (#{ano_user.name})", remo_path(ano_user), method: :delete %>
+    <%= button_to "unfollow (#{ano_user.name})", remove_path(ano_user), method: :delete %>
 <% else %>
     <%= button_to "follow (#{ano_user.name})", add_path(ano_user), method: :post %>
 <% end %> 
