--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,4 @@
 <%= render "pages/link_page" %>
-<%= link_to "View Questions", questions_path %>
-<div>
-last queestin
-<%= @ques = Question.last %>
-
-  
- <%
-=begin%>
- <%= render "questions/question_view", question: @ques %>   
-<%
-=end%>
- 
-<%
-=begin%>
- <%= link_to "View Questions", question_path %> 
-<%
-=end%>
+<div> last question <% @last = Question.last %>
+<%= render "questions/question_view", question: @last %>    
 </div>
