--- a/app/views/pages/_link_page.html.erb
+++ b/app/views/pages/_link_page.html.erb
@@ -1,13 +1,49 @@
-<header>
-    <% if current_user %>
-        <strong>
-            <%= link_to "Your Questions" , ques_path %> &nbsp;
-            <%= link_to "Your Answers" , ans_path %> &nbsp;
-            <%= link_to "Create Topic" , new_topic_path %> &nbsp;
-            <%= link_to "See Topics" , topics_path %> &nbsp;
-            <%= link_to "Users", userss_path %> &nbsp; 
-            <%= link_to "View Questions", questions_path %>
+<!-- <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+    Button with data-bs-target
+  </button>
+  
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div>
+        Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+      </div>
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+    </div>
+  </div> -->
 
-        </strong>
-        <% end %>
-</header>
+<%
+=begin%>
+ 
+
+
+    <% if current_user %>
+    <div class="side-navbar">
+         
+                    <%= link_to "Your Questions" , ques_path %> &nbsp;
+                    <%= link_to "Your Answers" , ans_path %> &nbsp;
+                    <%= link_to "Topics" , topics_path %> &nbsp;
+                    <%= link_to "Users", userss_path %> &nbsp; 
+                    <%= link_to "View Questions", questions_path %>
+      
+    </div>
+        <% end %> 
+<%
+=end%>
+<div>
+</div>
