--- a/app/views/pages/user_answers.html.erb
+++ b/app/views/pages/user_answers.html.erb
@@ -1,9 +1,11 @@
 <h1>Users Answers</h1> 
 
 <% @ans.each do |anser| %>
-    <div> <ul>
-    <li>Questions:<%= Question.find_by(id: anser.question_id).question %></li>
-    Answer:<%= anser.answer %>   
+    <div class="card"> <ul class="card-body">
+    <div class="card-title">Questions:
+    <strong><%= Question.find_by(id: anser.question_id).question %></strong></div>
+    Answer:<strong><%= anser.answer %> </strong>  
         </ul>
     </div>  
 <% end %>  
+<%= will_paginate @ans %>
