--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,54 @@
-<h3 class="navbar-text float-right">
-    <% if user_signed_in? %>
-Logged in as <strong><%= current_user.email %></strong>
-Welcome <strong><%= current_user.name %></strong>
-&nbsp;
-&nbsp;
-    <%= link_to 'Ask question', new_question_path %>
-&nbsp;
-    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-&nbsp;
-    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-&nbsp;
-    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-&nbsp;
-    <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+<header style="background-color:rgba(0,0,0,0.2);">
+<% if current_user %> 
+ <div class= "side-navbar " >
+                    <%= link_to "Your Questions" , ques_path %> &nbsp;
+                    <%= link_to "Your Answers" , ans_path %> &nbsp;
+                    <%= link_to "Topics" , topics_path %> &nbsp;
+                    <%= link_to "Users", userss_path %> &nbsp; 
+                    <%= link_to "View Questions", questions_path %>
+      
+</div>   
+ <% end %>
+<nav class="navbar navbar-expand-lg navbar-light" >
+  <div class="collapse navbar-collapse " id="navbarTogglerDemo03">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+  <br/>
+  <ul class=" navbar-nav mr-auto mt-2 mt-lg-0 ">
+    <li class="nav-item active nav-link ">
+        <%= link_to "HomePage", root_path %> </li>
+        &nbsp;
+        &nbsp;  
+    <!-- Default dropright button -->
+        <% if user_signed_in? %>        
+            <li class="nav-item active nav-link">
+            <%= link_to 'Ask question', new_question_path %> </li>
+        <% end %>
+    </ul>
+        <% if user_signed_in? %>
+        <div class="nav-item active nav-link">
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </div>
+            <div class="nav-item active nav-link">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+            &nbsp; &nbsp; </div> 
+            <div class="btn-group dropleft" >
+    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="toggle">
+        User_info
+    </button>
+            <ul class="dropdown-menu">
+                <!-- Dropdown menu links -->
+                <li class="dropdown-item" >Email: <strong><%= current_user.email %></strong></li>
+                <li class="dropdown-item" >Name:  <strong><%= current_user.name %></strong></li>
+            </ul>
+    </div>
+           <% else %>
+            <li class="nav-item active nav-link">
+            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> </li>
+            <li class="nav-item active nav-link">
+            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
     <% end %>
-&nbsp;
-    <%= link_to "HomePage", root_path %>
-</h3>
+  </div>
+</nav> 
+</header>
+
