--- a/app/views/pages/userss.html.erb
+++ b/app/views/pages/userss.html.erb
@@ -5,6 +5,6 @@
     <% if !another_user.nil? %>
         <% ano_user = another_user  %> 
         <%= render "pages/user_button", ano_user: ano_user %><%= ano_user.name%>
-        
     <% end %> 
  <% end %> 
+ <%= will_paginate @users %>
