--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,15 +7,28 @@
 
     <%
 =begin%>
+<%= f.select :category[], options_for_select(@categories.sort), {:include_blank => true, :multiple => true, :size =>10}  
  <%= f.collection_select(:topic_id, Topic.all, :id, :topic, :prompt => 'Select Any Topic') %> 
+    <%= f.select :topic, options_for_select(@topics.sort), {include_blank: true, multiple: true, size: 10} %>
+
+
+      <% byebug%>
+        <%= f.select(:topic_id, Topic.all.collect{|t| [t.topic, t.id] }, 
+            { multiple: true, prompt: "Want to follow any topic" })%>
 <%
 =end%>
 
 
+ <br/>
 <%= form_with( model: @question ) do |f| %>
-    <%= f.label :question %>
+<div class="field"> <%= f.label :question %> </div>
     <%= f.text_area :question %>
-    <%= f.submit 'Ask any Question'%>
+    <% for item in Topic.all %>
+<div class="field"> 
+    <%= check_box_tag "items[item_ids][]", item.id, @question.topic.include?(item) %>
+    <%=h item.topic %> </div>
+ <% end %> 
+<br />
+ <div class="action"> <%= f.submit 'Ask any Question'%> </div>
 <% end %> 
- 
  
