--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,3 +1,5 @@
+<strong><%= link_to "Create Topic" , new_topic_path %> &nbsp;
+</strong>
  <%= render "topics/user_topic" %>
 
 <h1>Topics</h1> 
@@ -14,5 +16,6 @@
          <th><%= topi.topic %>(id:<%= topi.id %>)</th>
       </tr>
 </table>    
+
 <% end %>
    
