--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,9 +32,9 @@
             <div class="nav-item active nav-link">
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
             &nbsp; &nbsp; </div> 
-            <div class="btn-group dropleft" >
-    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="toggle">
-        User_info
+            <div class="btn-group dropleft toggle" >
+    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-expanded="toggle">
+        User_info(t-e)
     </button>
             <ul class="dropdown-menu">
                 <!-- Dropdown menu links -->
