--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,27 +84,22 @@
 
 .pagination {
     display: flex;
-    padding-left: 0;
-    list-style: none;
-    border-radius: 0.25rem;
-    // flex-direction: row-reverse;
-    justify-content: flex-end;
+    margin-left: 80%;
+    align-items: flex-end;  
+    justify-content: space-between;
   }
-
-// .question-page{
-//    width: 100%;
-// }
-// .right-1{
-//    padding-left: 100px;
-// }
-// .right-2{
-//    padding-left: 200px;
-// }
+.new-form-row{
+   align-items: flex-end;
+}
+  
 .w-80{
    width: 100%;
 }
 .w-20{
    width: 20%;
+}
+.w-15{
+   width: 15%;
 }
 .pd-20{
    padding:20px;
@@ -121,4 +116,14 @@
 .ans-pading{
    padding: 15px;
    padding-bottom: 5px;
+}
+textarea{
+   border-radius: 7px;
+}
+form.button_to{
+   border-radius: 10%;
+}
+footer{
+   margin-bottom: 0%;
+   margin-top: auto;
 }
