--- a/app/views/pages/userss.html.erb
+++ b/app/views/pages/userss.html.erb
@@ -1,10 +1,18 @@
 <h1>Users Page</h1> 
- <strong> Follow them </strong> 
- <% @users.each do |user| %> 
-    <% another_user = user if user != current_user   %>
-    <% if !another_user.nil? %>
-        <% ano_user = another_user  %> 
-        <%= render "pages/user_button", ano_user: ano_user %><%= ano_user.name%>
-    <% end %> 
- <% end %> 
- <%= will_paginate @users %>
+<strong> Follow them </strong> 
+
+<div class="container">
+    <div class="row">
+    <% @users.each do |user| %> 
+        <% another_user = user if user != current_user   %>
+        <% if !another_user.nil? %>
+            <% ano_user = another_user  %> 
+            <div class="col-1 pt-2"> <%= ano_user.name%> </div>
+            <div class="col-1 pt-2"> <%= render "pages/user_button", ano_user: ano_user %> </div>
+            <div class="col-10"></div>
+        <% end %> 
+    <% end %>
+    </div>
+</div>
+
+<%= will_paginate @users %>
