--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,28 +1,9 @@
-<%
-=begin%>
- <div>
-    <% if current_user %>
-        <strong>
-            <%= link_to "Your Questions" , ques_path %> &nbsp;
-            <%= link_to "Your Answers" , ans_path %> &nbsp;
-            <%= link_to "Create Topic" , new_topic_path %> &nbsp;
-            <%= link_to "See Topics" , topics_path %> &nbsp;
-            <%= link_to "Users", userss_path %> &nbsp;
-
-            <%= render "topics/user_topic" %>
-        </strong>
-        <% end %>
-
-</div> 
-<%
-=end%>
-
 <h1>Questions</h1> 
  <div class="list-group">
 <% @questions.each do |question| %>
     <div class="list-group-item list-group-item-action flex-column ">
     <div class="d-flex justify-content-between w-80 ">
-        <h5 class="mb-1">
+        <h5 class="mb-1 mw-830">
     <%= link_to question.question , question_path(question)%> </h5>
     <div class = "d-flex w-20 justify-content-around edit-delete">
     <% if current_user && question.user_id==current_user.id %>
@@ -38,26 +19,6 @@
     </div>
          <% end %>
     </div>
-
-
-<%
-=begin%>
- <table >
-<% @questions.each do |question| %>
-    <tbody>
-        <tr>
-            <th ><%= question.question %></th>
-            <td><%= link_to "View" , question_path(question)%></td>
-        <% if current_user && question.user_id==current_user.id %>
-            <td><%= link_to "edit" , edit_question_path(question) %></td>
-            <td><%= link_to "delete" , question_path(question), method: :delete %></td>
-        <% end %>
-    <% end %>
-        </tr><br/>
-    </tbody>
-</table> 
-<%
-=end%>
 <br/>
  <%= will_paginate @questions %>  
 <br/>
