--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -25,7 +25,7 @@
   <% @question.topic.each do |topic| %>
     <div class="col-2">
       <%= topic.topic %>  
-      <%= render "topics/follow_button", topic: topic %>
+    <div id= "topic-<%= topic.id%>-button">  <%= render "topics/follow_button", topic: topic %></div>
     </div> 
   <% end %> 
   </div><br/> 
