--- a/app/views/topics/_follow_button.html.erb
+++ b/app/views/topics/_follow_button.html.erb
@@ -1,5 +1,5 @@
 <% if following_topic?(topic) %>
-    <%= button_to "Unfollow", topic_unfollow_path(topic) , method: :delete %> 
+    <%= button_to "Unfollow", topic_unfollow_path(topic) , method: :delete, remote: true %> 
 <% else %>
-    <%= button_to "Follow", topic_follow_path(topic) , method: :post %> 
+    <%= button_to "Follow", topic_follow_path(topic) , method: :post , remote: true%> 
 <% end %>
